--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.4.3",
+        "express": "^4.18.2",
+        "mysql2": "^3.9.1",
+        "sequelize": "^6.37.0"
+    }
 }
